@@ -1,4 +1,7 @@
 release 1.0.3 (2009-03/04)
+- Fixed issue with servlet or filter initialization parameters not being
+  copied to the ResourceConfig for Web applications that define and declare
+  their own ResourceConfig implementation.
 - Fixed two issues with the Apache HTTP client integration:
   1) Requests are repeatable by default and requests are buffered. Setting the
      property ClientConfig.PROPERTY_CHUNKED_ENCODING_SIZE to a value > 0 will
